<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    tools:context=".SettingsActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"/>

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:text="@string/enableNotifications" />

        <TextView
            android:id="@+id/txt_notification_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:text="@string/warningTime"/>

        <EditText
            android:id="@+id/input_notification_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:ems="10"
            android:layout_marginHorizontal="5dp"
            android:inputType="number" />

        <View
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="1dp"
            android:background="@android:color/darker_gray"/>

        <Switch
            android:id="@+id/individual_dates_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:text="@string/showDates" />

        <View
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/txt_time_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:text="@string/dayRange"/>




        <RadioGroup
            android:id="@+id/radioGroupDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <RadioButton
                android:id="@+id/radioMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - "/>

            <RadioButton
                android:id="@+id/radioTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />

            <RadioButton
                android:id="@+id/radioWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />

            <RadioButton
                android:id="@+id/radioThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />

            <RadioButton
                android:id="@+id/radioFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />

            <RadioButton
                android:id="@+id/radioSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />

            <RadioButton
                android:id="@+id/radioSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text=" - " />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
